@@ -1,4 +1,6 @@
 CHANGELOG for Views 2 for Drupal 6
+  Other changes:
+    o Implement a post_render hook (for themes too) and cache method.
 
 Views 2.6
   Bugs fixed:
